MORE UPDATES PUSHED

--- a/Level 2/level2.html
+++ b/Level 2/level2.html
@@ -8,6 +8,7 @@
   <title>My Portfolio</title>
   <link rel="stylesheet" href="level2.css" />
   <link rel="stylesheet" href="mediaqueries.css" />
+  <link rel="script" href="level2.js">
 </head>
 
 <body>
