--- a/Portfolio Website/Level 3/level3.html
+++ b/Portfolio Website/Level 3/level3.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="level3.css" />
   <link rel="stylesheet" href="mediaqueries.css" />
   <link rel="script" href="level3.js">
-</head>
 
-<body>
+</head>body>
+  
   <nav id="desktop-nav">
     <div class="logo">Anushka Kale</div>
     <div>
